--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@google/genai": "^1.34.0",
     "@supabase/supabase-js": "^2.45.4",
     "highlight.js": "^11.9.0",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "^0.562.0",
     "marked": "^15.0.0",
     "marked-highlight": "^2.2.1",
     "mermaid": "^10.9.1",
@@ -24,6 +24,9 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3",
     "vite": "^6.0.0"
   }
