--- a/package.json
+++ b/package.json
@@ -1,33 +1,28 @@
-
 {
-  "name": "docucraft-pro",
+  "name": "docucraft---professional-company-document-generator",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.34.0",
     "@supabase/supabase-js": "^2.45.4",
     "highlight.js": "^11.9.0",
     "lucide-react": "^0.562.0",
     "marked": "^15.0.0",
     "marked-highlight": "^2.2.1",
-    "mermaid": "^10.9.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "mermaid": "^11.12.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.3",
-    "vite": "^6.0.0"
+    "@types/node": "^22.14.0",
+    "@vercel/node": "^3.0.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
